anatomy of basic android

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">android-kotlin-base</string>
+    <string name="randomize_btn_label">Randomize</string>
 </resources>
